{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 29,
  "lineage": "0909a700-66ff-dba1-7ea4-c813e252c6b4",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc_data_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/jenkins-terraform-db/global/networks/vpc-network",
            "name": "vpc-network",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/global/networks/vpc-network",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/regions/europe-central2/subnetworks/my-custom-subnet"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T13:43:13.003-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/jenkins-terraform-db/global/firewalls/jenkins-firewall",
            "log_config": [],
            "name": "jenkins-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/global/networks/vpc-network",
            "priority": 1000,
            "project": "jenkins-terraform-db",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/global/firewalls/jenkins-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.vpc_data_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-16T13:15:45.305-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/jenkins-terraform-db/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/global/networks/vpc-network",
            "priority": 1000,
            "project": "jenkins-terraform-db",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-terraform-db/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-task"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_network.vpc_data_network"
          ]
        }
      ]
    }
  ]
}